added lots and lots of exercises for the intro and begun branch

--- a/intro/1.md
+++ b/intro/1.md
@@ -1,4 +1,4 @@
-# Exercise: Install and Setup
+# Exercise 1: Install and Setup
 
 In this exercise, you will install the following software necessary for the "git camp" on your local machine:
 
@@ -12,6 +12,11 @@ In this exercise, you will install the following software necessary for the "git
 
   Git [downloads](https://git-scm.com/download) are available on the git website.  We want to use the command line interface client, not the Graphical Client.
 
+- At the CLI, verify your git version
+
+  ```
+  $ git --version
+  ```
 - Run the following commands so that git knows your name and email:
 
   ```
@@ -35,12 +40,6 @@ In this exercise, you will install the following software necessary for the "git
   $ git config --global core.safecrlf true
   ```
 
-- At the CLI, verify your git version
-
-  ```
-  $ git --version
-  ```
-
 ## Install NodeJS
 
 For our Git exercises, you will use your laptop as a NodeJS server.
@@ -55,5 +54,14 @@ You will need a code editor.  Atom is a modern text editor created by GitHub.
 
 - Customize Atom using [Atom Packages](http://flight-manual.atom.io/using-atom/sections/atom-packages/).  See the #tools channel on Slack for package suggestions, such as **[atom-beautify](https://atom.io/packages/atom-beautify)**.  Add packages only as you need them.  
 
+## More Git Configuration.  Text editor
 
-[Home](/) | [Next](/intro/2)
+- You can configure the default text editor that will be used when Git needs you to type in a message. If not configured, Git uses your system's default editor.  In the code sample below, I am choosing Atom.  
+
+  ```
+  $ git config --global core.editor atom
+  ```
+
+
+
+[Home](/)   |   [Intro](/intro/)   |    [Next](/intro/2)
