--- a/intro/3.md
+++ b/intro/3.md
@@ -1,12 +1,112 @@
-# Exercise: Hello World
+# Exercise 3: Create a repository, checking the status, and staging changes
 
-Create a simple NodeJS application
+In this exercise we will initialize a repository in an our **hello-world** project directory.  This creates a new subdirectory named **.git** that contains all of your necessary repository files – a Git repository skeleton. We will then specify the files we wish to track in our Git repository.  Along the way we will monitor the status of our changes. 
 
-- stuff
+## Overview
+
+In this exercise we will learn the following commands:
+
+0. `git init` to create (initialize) a git repository
+0. `git status` to check the state between the repo and the files in your project's working directory
+0. `git add` to add files to the repository
+
+## Instructions
+
+- Create a git repository from within the **hello-world** directory by running the `git init` command.
 
   ```
-  $
-  $
+  $ git init
+  ```
+  You should see the following message:
+
+  ```
+  Initialized empty Git repository ... <path to your project>
   ```
 
-[Home](/) | [Prev](/intro/2) | [Next](/intro/4)
+- Check the status of the repository (repo) using the `git status` command.  This command monitors the state between the repository and the files in your project's working directory.  
+
+  ```
+  $ git status
+  ```
+
+  You should see something like this...
+
+  ```
+  On branch master
+
+  Initial commit
+
+  Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+
+	index.js
+	package.json
+	readme.md
+
+  nothing added to commit but untracked files present (use "git add" to track)
+  ```
+
+  The status reports that you have three untracked files.
+
+- Use the `git add` command to add these files to the repository.  Use the `git status` command after each `git add` to monitor the state between the repository and the files in your project's working directory.
+
+  ```
+  $ git add index.js
+  $ git status
+  $ git add package.json
+  $ git status
+  $ git add readme.md
+  $ git status
+  ```
+
+  The last `git status` command should report the following status:
+
+  ```
+  On branch master
+
+  Initial commit
+
+  Changes to be committed:
+  (use "git rm --cached <file>..." to unstage)
+
+	new file:   index.js
+	new file:   package.json
+	new file:   readme.md
+  ```
+
+- Use your code editor to open the **hello-world** project directory
+- Edit **index.js** by changing the message within `console.log()` and save the file.
+- Run the `git status` command to monitor the state between the repo and the files in your working directory.  
+
+
+
+  ```
+  $ git status
+On branch master
+
+Initial commit
+
+Changes to be committed:
+  (use "git rm --cached <file>..." to unstage)
+
+	new file:   index.js
+	new file:   package.json
+	new file:   readme.md
+
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git checkout -- <file>..." to discard changes in working directory)
+
+	modified:   index.js
+  ```
+
+Git knows the file has been changed but the file needs to be staged .  You will need to use the `git add` command to stage the change to the **index.js** file. Once staged, git now knows about the change, but the change hasn’t been permanently recorded in the repository yet.  You can continue to make changes to the file, but you will need to stage the changes again with `git add`.
+
+- Tell git to stage the change and check the status.
+
+  ```
+  $ git add index.js
+  $ git status
+  ```
+
+[Home](/)   |   [Intro](/intro/)   |    [Prev](/intro/2)   |   [Next](/intro/4)
