--- a/intro/4.md
+++ b/intro/4.md
@@ -1,12 +1,51 @@
-# Exercise
+# Exercise 4: Record changes to the repository
 
+## Overview
 
+Once a file has been staged with `git add`, git now knows about the change, but the change hasn’t been permanently recorded in the repository yet.   When you are ready to record to source control exactly what you did to the file(s), you can use the  `git commit` to record the file changes to the repository.
 
-- stuff
+The `git commit` command uses the `-m` flag/option/switch/parameter to provide a comment on the command line.  
+
+> It is customary to start with a verb and be concise, yet descriptive.  If you have to explain too much about your commit, you are probably attempting to cram too many changes across a single commit.
+
+## Instructions
+
+- Use `git status` to review the files that are staged for the commit.  Use `git commit` to record the changes to the staged files to the repository.  Finally, use `git status` one more time to confirm the fact that there are no changes to commit and the working directory is "clean", that is, no changes to the files in the directory that need to be staged or committed.
 
   ```
-  $
-  $
+  $ git status
+  $ git commit -m "initial commit"
+  $ git status
   ```
 
-[Home](/) | [Prev](/intro/3) | [Next](/intro/5)
+  Your console should look something like this:
+
+  ```
+  $ git status
+  On branch master
+
+  Initial commit
+
+  Changes to be committed:
+    (use "git rm --cached <file>..." to unstage)
+
+  	new file:   index.js
+  	new file:   package.json
+  	new file:   readme.md
+
+  ╭─wottinger@CKSCLP025  ~/Dropbox/jrs/code/hello-world  ‹master*›
+  ╰─$ git commit -m "initial commit"
+  [master (root-commit) 169ddfb] initial commit
+   3 files changed, 14 insertions(+)
+   create mode 100644 index.js
+   create mode 100644 package.json
+   create mode 100644 readme.md
+  ╭─wottinger@CKSCLP025  ~/Dropbox/jrs/code/hello-world  ‹master›
+  ╰─$ git status
+  On branch master
+  nothing to commit, working tree clean
+  ```
+
+  > Notice the separate steps for staging (`git add`) and recoding changes to source code control (`git commit`).  This provides you with the ability to control exactly what changes to wish to record in the repo.   
+
+[Home](/)   |   [Intro](/intro/)   |    [Prev](/intro/3)   |   [Next](/intro/5)
