--- a/intro/5.md
+++ b/intro/5.md
@@ -1,12 +1,65 @@
-# Exercise
+# Exercise 5: Controlling what is recorded to source control
 
+Git allows you to control which file changes make their way into a commit.  In this way you can organize changes to specific files together into the same commit.  To get some practice, add a file to your project, followed by making some changes to the exiting files in the project.  
 
-
-- stuff
+- Add a file named **newfile.md** to your **hello-world** project.
 
   ```
-  $
-  $
+  $ echo "# Hello, is it me your looking for" >> newfile.md
   ```
 
-[Home](/) | [Prev](/intro/4) | [Next](/intro/6)
+- Make a change to the **index.js** file by adding an additional `console.log()`.  Save the file and run `git status`
+
+- Make a change to the **readme.md** file by adding a new paragraph.  Save the file and run `git status`.
+
+  At this point your status should report that you have:
+
+  * a _new_ file that is "untracked". It is not yet tracked and staged for a future commit.
+  * two existing files that are currently being tracked.  These files have been modified but they have not yet been staged for a future commit.  
+
+
+  ```
+  $ git status
+On branch master
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git checkout -- <file>..." to discard changes in working directory)
+
+	modified:   index.js
+	modified:   readme.md
+
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+
+	newfile.md
+
+no changes added to commit (use "git add" and/or "git commit -a")
+  ```  
+
+We need to commit all these three files.  But we want the **newfile.md** to be in its own commit as it represents a separate piece of work.  We would also like the changes to the  **index.js** and **readme.md** files to reside within a separate commit.  By separating the staging and commiting of specific files, you have the ability to dictate what changes go into each commit.
+
+- Use `git add` to add track and stage the **newfile.md** file.  
+- Use the `git commit` command to commit the file.
+- Use `git status` to inspect the status of your working directory against source control.
+
+  ```
+  $ git add newfile.md
+  $ git commit -m "Adding the newfile."
+  $ git status
+  ```
+
+Now let's commit the remaining files: **index.js** and **readme.md**
+
+  - Use the `git add .` to stage _all the remaining files_.
+  - Use `git status` to inspect the status of your working directory against source control.
+  - Use the `git commit` command to commit the two files.
+  - Check the status one last time.  
+
+  ```
+  $ git add .
+  $ git status
+  $ git commit -m "Adding the remaining files."
+  $ git status
+  ```
+
+[Home](/)   |  [Intro](/intro/)   |   [Prev](/intro/4)   |   [Next](/intro/6)
