--- a/intro/6.md
+++ b/intro/6.md
@@ -1,12 +1,45 @@
-# Exercise
+# Exercise 6:  Tracking and staging changes to a file
 
+Let's get some more practice tracking changes _to the file_ rather than the entire file.
 
-
-- stuff
+- Add the following paragraphs to **newfile.md**. Save the file.
 
   ```
-  $
-  $
+  Hello!
+  Is it me you're looking for?
+  I can see it in your eyes
+  I can see it in your smile
   ```
 
-[Home](/) | [Prev](/intro/5) | [Next](/intro/7)
+- Add the changes to the staging area and check the status.
+
+  ```
+  $ git add newfile.md
+  $ git status
+  ```
+
+- Add a H2 tag and another paragraph to the  **newfile.md**. Save the file.
+
+- Add the changes to the staging area and check the status.
+
+  ```
+  $ git add newfile.md
+  $ git status
+  ```
+
+Did you notice that the file is listed twice?  The first change is staged and ready to be committed.  The second change is unstaged.  If we were to commit, the second change would NOT be saved into the repo.
+
+-  Commit the first, staged change:
+
+  ```
+  $ git commit -m "Adding the lyrics"
+  $ git status
+  ```
+
+`git status` should reveal the staged changes are committed.  However there are still changes to the file that have not yet been staged.
+
+- Add the second change to the staging area and get the status.
+- Commit the change.  Get the status, again.
+
+
+[Home](/)   |   [Intro](/intro/)   |    [Prev](/intro/5)   |    [Next](/intro/7)
