--- a/intro/7.md
+++ b/intro/7.md
@@ -1,12 +1,100 @@
-# Exercise
+# Exercise 7: History
 
+This exercise will teach you how to view the history of your project by retrieving a list of what changes have been made using the `git log` command.
 
+To browse the history of the project, Git doesn’t need to go out to the server to get the history and display it for you – it simply reads it directly from your local .git database.
 
-- stuff
+Once we have listed the history, we can use a commit's "hash" identifier to `checkout` a previous snapshot into the working directory.
+
+![Git stage diagram](/static/assets/img/git-stage-diagram.png)
+
+- Execute the `git log` to view the commit history including the SHA, Author, and Date
+
+- Enter a 'q' to quit and return to the command line.
+
+- Execute the following command to make the log more readable.
 
   ```
-  $
-  $
+  $ git log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short
   ```
 
-[Home](/) | [Prev](/intro/6) | [Next](/intro/8)
+ Everything in Git is check-summed before it is stored and is then referred to by that checksum called a SHA-1 hash, or simply the _hash_ or _SHA_ or _"Shah"_.  
+
+- Note the listed hashes in your history log. Run the following log command again:
+
+  ```
+  $ git log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short
+  ```
+
+  Your output should display a commit history.  **The first 7 characters of each commit is the hash.  Each hash identifies a particular commit or snapshot.**  
+
+  ```
+  * b243573 2016-10-12 | adding more stuff (HEAD -> master) [tripott]
+  * 21faa35 2016-10-12 | adding modified [tripott]
+  * 255dfaa 2016-10-12 | adding the new file [tripott]
+  * 169ddfb 2016-10-11 | initial commit [tripott]
+  ```  
+
+- The last item listed in the history log represents the first, initial commit.  Copy the hash id for the initial commit to your clipboard.
+
+- Open your **readme.md** file.  Inspect the current state of its content.
+
+
+- Run the following commands:
+
+  ```
+  $ git checkout <your copied hash>
+  $ cat readme.md
+  ```
+
+  ![Go back in time](https://i.ytimg.com/vi/k0kswK2aI08/maxresdefault.jpg)
+
+  You should see something similar to this (your hash value will differ from the one shown below)
+
+
+  ```
+  $ git checkout 169ddfb
+Note: checking out '169ddfb'.
+
+You are in 'detached HEAD' state. You can look around, make experimental
+changes and commit them, and you can discard any commits you make in this
+state without impacting any branches by performing another checkout.
+
+If you want to create a new branch to retain commits you create, you may
+do so (now or later) by using -b with the checkout command again. Example:
+
+  git checkout -b <new-branch-name>
+
+HEAD is now at 169ddfb... initial commit
+╭─wottinger@CKSCLP025  ~/Dropbox/jrs/code/hello-world  ‹169ddfb›
+╰─$ cat readme.md
+# Hello World
+
+  ```
+
+Did you notice that the contents of the **readme.md** changed?  
+
+Did that blow your mind?
+
+![Go back in time](http://media.nbcwashington.com/images/652*367/back+to+the+future.jpg)
+
+
+## Back to the future
+
+Let's return to the present time.  Let's go back to the future.  All repo's have a default branch named "master".  By checking out this branch we return to the latest version of our "master" branch.  
+
+- Execute the following commands:
+
+  ```
+  $ git checkout master
+  $ cat readme.md
+  ```
+
+
+![Go back in time](https://tctechcrunch2011.files.wordpress.com/2015/09/tumblr_msneyihqrv1rf3wd1o1_500.gif)
+
+- Take a moment and repeat the process of checking out different snapshots in time of your project and inspect the contents of the files before and after the checkout.
+
+
+
+[Home](/)   |   [Intro](/intro/)   |   [Prev](/intro/6)   |   [Next](/intro/8)
