--- a/intro/2.md
+++ b/intro/2.md
@@ -1,4 +1,4 @@
-# Exercise: Hello World
+# Exercise 2: Hello World
 
 Create a NodeJS project and git repository from scratch on your local machine using the command line interface.
 
@@ -14,101 +14,5 @@ Create a NodeJS project and git repository from scratch on your local machine us
   ```
 - You should now have a **hello-world** subdirectory that contains a **package.json** file, **readme.md** file, and **index.js** file.  Running the `node index.js` command in the CLI  should display "Hello World!".  
 
-- Create a git repository from within the **hello-world** directory by running the `git init` command.
 
-  ```
-  $ git init
-  ```
-  You should see the following message:
-
-  ```
-  Initialized empty Git repository ... <path to your project>
-  ```
-
-- Check the status of the repository (repo) using the `git status` command.  This command monitors the state between the repository and the files in your project's working directory.  
-
-  ```
-  $ git status
-  ```
-
-  You should see something like this...
-
-  ```
-  On branch master
-
-  Initial commit
-
-  Untracked files:
-  (use "git add <file>..." to include in what will be committed)
-
-	index.js
-	package.json
-	readme.md
-
-  nothing added to commit but untracked files present (use "git add" to track)
-  ```
-
-  The status reports that you have three untracked files.
-
-- Use the `git add` command to add these files to the repository.  Use the `git status` command after each `git add` to monitor the state between the repository and the files in your project's working directory.
-
-  ```
-  $ git add index.js
-  $ git status
-  $ git add package.json
-  $ git status
-  $ git add readme.md
-  $ git status
-  ```
-
-  The last `git status` command should report the following status:
-
-  ```
-  On branch master
-
-  Initial commit
-
-  Changes to be committed:
-  (use "git rm --cached <file>..." to unstage)
-
-	new file:   index.js
-	new file:   package.json
-	new file:   readme.md
-  ```
-
-- Use your code editor to open the **hello-world** project directory
-- Edit **index.js** by changing the message within `console.log()` and save the file.
-- Run the `git status` command to monitor the state between the repo and the files in your working directory.  
-
-
-
-  ```
-  $ git status
-On branch master
-
-Initial commit
-
-Changes to be committed:
-  (use "git rm --cached <file>..." to unstage)
-
-	new file:   index.js
-	new file:   package.json
-	new file:   readme.md
-
-Changes not staged for commit:
-  (use "git add <file>..." to update what will be committed)
-  (use "git checkout -- <file>..." to discard changes in working directory)
-
-	modified:   index.js
-  ```
-
-Git knows the file has been changed but git has not been updated with the changes to the file.
-
-- Tell git to stage the change and check the status.
-
-  ```
-  $ git add index.js
-  $ git status
-  ```
-
-[Home](/) | [Prev](/intro/1) | [Next](/intro/3)
+[Home](/)   |   [Intro](/intro/)   |   [Prev](/intro/1)   |   [Next](/intro/3)
