adding intro and branch exercises

--- a/branch/1.md
+++ b/branch/1.md
@@ -1,4 +1,93 @@
-# Exercise 1:  Branch
+# Exercise 1:  Create a new "branch-fun" project
+
+We are done with our hello-world project.  In this exercise we will create a new NodeJS application to play around with branching in Git.
+
+- Create a new NodeJS application by running the following commands:
+
+```
+$ mkdir branch-fun
+$ cd branch-fun
+$ npm init -y
+$ echo "# Branching is fun" >> readme.md
+$ echo "console.log('Branching in Git rocks')" >> index.js
+$ node index.js
+```
+- You should now have a **branch-fun** subdirectory that contains a **package.json** file, **readme.md** file, and **index.js** file.  Running the `node index.js` command in the CLI  should display "Branching in Git rocks".  
+
+- Create a git repository from within the **branch-fun** directory by running the `git init` command.
+
+  ```
+  $ git init
+  ```
+  You should see the following message:
+
+  ```
+  Initialized empty Git repository ... <path to your project>
+  ```
+
+- Check the status of the repository (repo) using the `git status` command.  This command monitors the state between the repo and the files in your project's working directory.  
+
+  ```
+  $ git status
+  ```
+  The status reports that you have three untracked files.
+
+- Use the `git add` command to add these files to the repository.  Use the `git status` command after each `git add` to monitor the state between the repository and the files in your project's working directory.
+
+  ```
+  $ git add index.js
+  $ git status
+  $ git add package.json
+  $ git status
+  $ git add readme.md
+  $ git status
+  ```
+
+  The last `git status` command should report the following status:
+
+  ```
+  On branch master
+
+  Initial commit
+
+  Changes to be committed:
+  (use "git rm --cached <file>..." to unstage)
+
+	new file:   index.js
+	new file:   package.json
+	new file:   readme.md
+  ```
+
+- Commit the staged changes into the repo with `git commit`.
+
+  ```
+  $ git commit -m "initial commit"
+  $ git status
+  ```
+
+- Run `git log` to view where the `HEAD` is pointing.
+
+  ```
+  $ git log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short
+  ```
+
+- Create a new branch called `feature-album-images`. You do this with the git branch command:
+
+ ```
+ $ git branch feature-album-images
+ ```
+
+ - Run `git log` again to view where the `HEAD` is pointing.
+
+   ```
+   $ git log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short
+   ```
+- Switch to the new branch and view the log again.
+
+  ```
+  $ git checkout feature-album-images
+  $ git log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short
+  ```
 
 
 
