--- a/branch/2.md
+++ b/branch/2.md
@@ -1,4 +1,67 @@
-# Exercise 2:  Branch
+# Exercise 2:  Create a new feature in the branch.
+
+In this exercise we will use the `git branch` command to list the branches in the repo and verify which branch that `HEAD` is currently pointing to.  
+
+Let's create a new feature by adding an image of you favorite album to the **readme.md** file.
+
+- Verify what branch `HEAD` is currently pointing to:
+
+  ```
+  $ git branch
+  ```
+- We want to be in the `feature-album-images` branch.  Use `git checkout feature-album-images` to switch to the correct branch, if necessary.
+
+  ```
+  $ git checkout feature-album-images
+  ```
+
+- Within your **branch-fun** project directory, create a sub-folder named **static**.
+- Add an image file of your favorite album to the **static** folder.
+- Open the **readme.md** file in your text editor, such as Atom.  
+- Add markdown to display an inline image of your favorite album using the following markdown syntax:
+
+  * An exclamation mark: !
+  * Followed by a set of square brackets, containing the alt attribute text for the image
+  * Followed by a set of parentheses, containing the URL or path to the image
+
+  ```
+  ![Alt text](/static/my-favorite-album.png)
+  ```
+
+  Here is an example:
+
+  ```
+  # Branching is fun
+
+  Here is my favorite album:
+
+  ![love-pixies](/static/pixies-doolittle.png)
+  ```
+
+- Save, stage, and commit the changes to the repo.
+- Verify that there is nothing to commit and the working tree is clean.
+- Check out the `master` branch.
+
+  ```
+  $ git checkout master
+  ```
+
+- Use `git branch` to verify that the `HEAD` is pointing to the `master` branch.
+- Open the **readme.md** file.  Where did your changes go?  Where is your image?
+
+  ![mind blown](/static/assets/img/cena-mind-blown.gif)
+
+- Close the **readme.md** file.
+- Check out the `feature-album-images` branch, again.
+
+  ```
+  $ git checkout feature-album-images
+  ```
+
+- Use `git branch` to verify that the `HEAD` is pointing to the `feature-album-images` branch.
+
+- Open the **readme.md** file, again.
+
 
 
 
