--- a/branch/3.md
+++ b/branch/3.md
@@ -1,5 +1,17 @@
-# Exercise 3:  Branch
+# Exercise 3:  Merging a feature branch into master
 
+Merging brings changes from one branch into another branch.
+Let's assume that our users are thrilled about our new feature in the `feature-album-images` branch.  We need a way to merge the changes in the `feature-album-images` branch into the `master` branch.  In the future, when we branch from `master`, the code within master will contain our album image feature.  When you are done with a feature branch you can delete it using `git branch -d <branch name>`.
+
+```
+$ git checkout master
+$ git branch
+$ git log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short --all
+$ git merge feature-album-images
+$ git log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short --all
+$ git branch -d feature-album-images
+$ git branch
+```
 
 
 [Home](/) | [Branch](/branch/)  |  [Prev](/branch/2)  |  [Next](/branch/4)
