--- a/intro/8.md
+++ b/intro/8.md
@@ -22,6 +22,8 @@ Having to look up the hash for a commit can get old. It would be nice if we coul
   $ git tag v0.9
   ```
 
+  ![master-branch-commit-history](/static/assets/img/master-branch-commit-history.png)
+
 - List all the tags
 
   ```
