adding github and branch exercises.

--- a/branch/5.md
+++ b/branch/5.md
@@ -93,7 +93,7 @@ As we learned in our previous two exercises, merging brings changes from one bra
   $ git log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short --all
   ```
 
-  Here is the results of the log (your mileage may vary): 
+  Here is the results of the log (your mileage may vary):
 
   ```
   *   58ebd42 2016-10-13 | resolving merge conflict from feature-a (HEAD -> master) [tripott]
@@ -112,4 +112,4 @@ As we learned in our previous two exercises, merging brings changes from one bra
 
 
 
-[Home](/) | [Branch](/branch/)  |  [Prev](/branch/3)  |  [Next](/branch/5)
+[Home](/) | [Branch](/branch/)  |  [Prev](/branch/3)  |  [Next](/github)
