edits to intro section

--- a/intro/2.md
+++ b/intro/2.md
@@ -1,6 +1,6 @@
 # Exercise 2: Hello World
 
-Create a NodeJS project and git repository from scratch on your local machine using the command line interface.
+Create a NodeJS project from scratch on your local machine using the command line interface.
 
 - Using the command line interface (CLI), create a directory named **hello-world**, the beginnings of a **package.json** file, **readme.md** file, **index.js** file.
 
