edits to intro 6

--- a/intro/6.md
+++ b/intro/6.md
@@ -20,14 +20,13 @@ Let's get some more practice tracking changes _to the file_ rather than the enti
 
 - Add a H2 tag and another paragraph to the  **newfile.md**. Save the file.
 
-- Add the changes to the staging area and check the status.
+- Do not stage the latest change.  Just check the status:
 
   ```
-  $ git add newfile.md
   $ git status
   ```
 
-Did you notice that the file is listed twice?  The first change is staged and ready to be committed.  The second change is unstaged.  If we were to commit, the second change would NOT be saved into the repo.
+Did you notice that the file is listed twice?  The first change is staged and ready to be committed.  The second change is unstaged.  **If we were to commit, the second change would NOT be saved into the repo.**
 
 -  Commit the first, staged change:
 
