--- a/intro/1.md
+++ b/intro/1.md
@@ -12,7 +12,7 @@ In this exercise, you will install the following software necessary for the "git
 
   Git [downloads](https://git-scm.com/download) are available on the git website.  We want to use the command line interface client, not the Graphical Client.
 
-- At the CLI, verify your git version
+- Using terminal, utilize the `git` command line interface (cli) to verify your version of git
 
   ```
   $ git --version
