--- a/intro/2.md
+++ b/intro/2.md
@@ -12,7 +12,7 @@ Create a NodeJS project from scratch on your local machine using the command lin
   $ echo "console.log('Hello World!')" >> index.js
   $ node index.js
   ```
-- You should now have a **hello-world** subdirectory that contains a **package.json** file, **readme.md** file, and **index.js** file.  Running the `node index.js` command in the CLI  should display "Hello World!".  
+- You should now have a **hello-world** subdirectory that contains a **package.json** file, **readme.md** file, and **index.js** file.  Running the `node index.js` command in the terminal should display "Hello World!".  
 
 
 [Home](/)   |   [Intro](/intro/)   |   [Prev](/intro/1)   |   [Next](/intro/3)
