--- a/intro/3.md
+++ b/intro/3.md
@@ -1,6 +1,6 @@
 # Exercise 3: Create a repository, checking the status, and staging changes
 
-In this exercise we will initialize a repository in an our **hello-world** project directory.  This creates a new subdirectory named **.git** that contains all of your necessary repository files – a Git repository skeleton. We will then specify the files we wish to track in our Git repository.  Along the way we will monitor the status of our changes. 
+In this exercise we will initialize a repository in an our **hello-world** project directory.  This creates a new subdirectory named **.git** that contains all of your necessary repository files – a Git repository skeleton. We will then specify the files we wish to track in our Git repository.  Along the way we will monitor the status of our changes.
 
 ## Overview
 
@@ -8,7 +8,7 @@ In this exercise we will learn the following commands:
 
 0. `git init` to create (initialize) a git repository
 0. `git status` to check the state between the repo and the files in your project's working directory
-0. `git add` to add files to the repository
+0. `git add` to add changes within specified files to the repository
 
 ## Instructions
 
@@ -100,7 +100,7 @@ Changes not staged for commit:
 	modified:   index.js
   ```
 
-Git knows the file has been changed but the file needs to be staged .  You will need to use the `git add` command to stage the change to the **index.js** file. Once staged, git now knows about the change, but the change hasn’t been permanently recorded in the repository yet.  You can continue to make changes to the file, but you will need to stage the changes again with `git add`.
+Git knows the file has been changed but the file needs to be staged.  Use the `git add` command to stage the change to the **index.js** file. Once staged, git now knows about the change, but the change hasn’t been permanently recorded in the repository yet.  You can continue to make changes to the file, but you will need to stage the changes again with `git add`.
 
 - Tell git to stage the change and check the status.
 
