--- a/intro/4.md
+++ b/intro/4.md
@@ -2,7 +2,7 @@
 
 ## Overview
 
-Once a file has been staged with `git add`, git now knows about the change, but the change hasn’t been permanently recorded in the repository yet.   When you are ready to record to source control exactly what you did to the file(s), you can use the  `git commit` to record the file changes to the repository.
+Once a file has been staged with `git add`, git now knows about the change, but the change hasn’t been permanently recorded in the repository, yet.   When you are ready to record to source control exactly what you did to the file(s), you can use the  `git commit` to record the file changes to the repository.
 
 The `git commit` command uses the `-m` flag/option/switch/parameter to provide a comment on the command line.  
 
