fix issue with unstage command

--- a/intro/9.md
+++ b/intro/9.md
@@ -21,7 +21,7 @@ You can undo changes to the _working directory_ before those changes are staged.
 - Revert the changes to the individual file in the working directory using `git checkout`
 
   ```
-  $ git checkout readme.md
+  $ git reset HEAD <your file here>
   $ git status
   $ cat readme.md
   ```
