ex numbers missing

--- a/intro/11.md
+++ b/intro/11.md
@@ -1,4 +1,4 @@
-# Exercise:  Undoing committed changes
+# Exercise 11:  Undoing committed changes
 
 Let's revert changes that have been committed to your local repo (.git database).  We will use the `get revert HEAD` command to generate a commit that removes the committed changes.
 
@@ -36,7 +36,7 @@ Let's revert changes that have been committed to your local repo (.git database)
   * 169ddfb 2016-10-11 | initial commit [tripott]
   ```
 
-- Review the contents of the file.  You should see that its contents have been converted.  Unfortunately, our mistake is forever written in the annals of git history.  This tends to make one _sad_. 
+- Review the contents of the file.  You should see that its contents have been converted.  Unfortunately, our mistake is forever written in the annals of git history.  This tends to make one _sad_.
 
 ** TOP TIP **
 
